--- a/README.org
+++ b/README.org
@@ -16,6 +16,21 @@ An excursion into making an URL shortening service.
 
   WIP :shipit:
 
+** Setup Docker Compose
+  
+  Create a `.env` file using `scripts/create-env.sh`. Run this in the root of the project folder.
+
+  ```bash
+  $ chmod +x scripts/create-env.sh
+  $ bash scripts/create-env.sh
+  ```
+
+  Start the services.
+
+  ```bash
+  $ docker-compose up --build
+  ```
+
 * Custom Installation
 
   WIP :shipit:
