--- a/README.org
+++ b/README.org
@@ -18,18 +18,18 @@ An excursion into making an URL shortening service.
 
 ** Setup Docker Compose
   
-  Create a `.env` file using `scripts/create-env.sh`. Run this in the root of the project folder.
+  Create a =.env= file using =scripts/create-env.sh=. Run this in the root of the project folder.
 
-  ```bash
+  #+BEGIN_SRC bash
   $ chmod +x scripts/create-env.sh
   $ bash scripts/create-env.sh
-  ```
+  #+END_SRC
 
   Start the services.
 
-  ```bash
+  #+BEGIN_SRC bash
   $ docker-compose up --build
-  ```
+  #+END_SRC
 
 * Custom Installation
 
